--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "Filtres personnalisés"
   },
+  "custom_filters_has_been_updated": {
+    "message": "Les filtres personnalisés ont été mis à jour"
+  },
   "customer_interaction": {
     "message": "Interaction avec les clients",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "jours"
   },
   "detailed_view": {
     "message": "Affichage détaillé"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Affiche le décompte des trackers sur l'icône Ghostery dans la barre d'outils du navigateur."
+  },
+  "dnr_rules__@_0_": {
+    "message": "Les règles DNR : $${0}"
   },
   "don_t_ask_again": {
     "message": "Ne demande plus rien"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "Saisir l'URL du site web"
   },
-  "errors__@_0___": {
-    "message": "Erreurs ($${0}) :"
+  "errors__@_0__": {
+    "message": "Erreurs ($${0})"
   },
   "essential": {
     "message": "Essentiels",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "Obtenir de l'aide"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery : action requise"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery ne peut pas les bloquer en raison d'autorisations manquantes."
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery a été repris."
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery est prêt à protéger votre vie privée en mettant en échec les trackers quand vous naviguez !"
-  },
-  "ghostery_is_disabled": {
-    "message": "Ghostery est désactivé"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery est installé avec une fonctionnalité limitée"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "Ghostery cessera de fonctionner dans :"
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "Hébergement",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "heures"
   },
   "ignore": {
     "message": "Ignorer"
@@ -490,9 +478,6 @@
   "renew_ghostery_for_full_protection": {
     "message": "Renouvelez Ghostery pour bénéficier d'une protection complète"
   },
-  "renew_setup": {
-    "message": "Renouveler la configuration"
-  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Remplace l'icône Ghostery dans la barre d'outils du navigateur par l'anneau des trackers."
   },
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "Trackers comptés"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Trackers détectés par Ghostery sur ce site :&nbsp;$${0}"
-  },
   "trackers_modified": {
     "message": "Trackers modifiés"
   },
@@ -639,9 +621,6 @@
     "message": "Non identifié",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "Mettre à jour les filtres"
-  },
   "urls_blocked": {
     "message": "URL bloquées"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "Visite notre blog"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Nous savons que tu comptes sur Ghostery pour une expérience YouTube fluide. En attendant qu'une solution plus raffinée émerge, voici une solution temporaire."
