--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -162,7 +162,7 @@
     "message": "Copiato negli appunti"
   },
   "cosmetic_filters__@_0_": {
-    "message": "Filtri Cosmetici: $${0}"
+    "message": "Filtri cosmetici: $${0}"
   },
   "country": {
     "message": "Paese"
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "Filtri Personalizzati"
   },
+  "custom_filters_has_been_updated": {
+    "message": "I filtri personalizzati sono stati aggiornati"
+  },
   "customer_interaction": {
     "message": "Interazione Cliente",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "giorni"
   },
   "detailed_view": {
     "message": "Vista Dettagliata"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Mostra il conteggio dei tracker sull’icona di Ghostery nella barra degli strumenti del browser."
+  },
+  "dnr_rules__@_0_": {
+    "message": "Le regole DNR: $${0}"
   },
   "don_t_ask_again": {
     "message": "Non chiederlo più"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "Inserire l'URL del sito web"
   },
-  "errors__@_0___": {
-    "message": "Errori ($${0}):"
+  "errors__@_0__": {
+    "message": "Errori ($${0})"
   },
   "essential": {
     "message": "Essenziali",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "Ricevi aiuto"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery: azione richiesta"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery non può bloccarli a causa di autorizzazioni mancanti."
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery è stato ripreso."
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
-  },
-  "ghostery_is_disabled": {
-    "message": "Ghostery è disabilitato"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery è installato con funzionalità limitate"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrerà quanti tracker sono stati bloccati in una pagina. Cliccare sull’icona di Ghostery per avere informazioni più dettagliate."
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "Ghostery smetterà di funzionare tra:"
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Aiuta Ghostery a lottare per un web dove la privacy è un diritto umano fondamentale."
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "ore"
   },
   "ignore": {
     "message": "Ignora"
@@ -403,7 +391,7 @@
     "message": "Visita un sito web e scopri Ghostery in azione."
   },
   "network_filters__@_0_": {
-    "message": "Filtri di Rete: $${0}"
+    "message": "Filtri di rete: $${0}"
   },
   "never_consent": {
     "message": "Never-Cosent"
@@ -489,9 +477,6 @@
   },
   "renew_ghostery_for_full_protection": {
     "message": "rinnova GHOSTERY per una protezione completa"
-  },
-  "renew_setup": {
-    "message": "Rinnova la configurazione"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Sostituisce l’icona di Ghostery nella barra degli strumenti del browser con la ruota tracker."
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "Conteggio tracker"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Tracker rilevati da Ghostery su questo sito web:&nbsp;$${0}"
-  },
   "trackers_modified": {
     "message": "Tracker modificati"
   },
@@ -639,9 +621,6 @@
     "message": "Non identificato",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "Aggiorna Filtri"
-  },
   "urls_blocked": {
     "message": "URL bloccati"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "Visita il nostro blog"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "Abbiamo aggiornato i Termini e condizioni. Per continuare a usare il Ghostery Tracker & Ad Blocker durante la navigazione, rinnova la configurazione."
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Sappiamo che ti affidi a Ghostery per un'esperienza fluida su YouTube. In attesa di una soluzione più raffinata, ecco una soluzione temporanea."
