--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -162,7 +162,7 @@
     "message": "Copiado para a área de transferência"
   },
   "cosmetic_filters__@_0_": {
-    "message": "Filtros Cosméticos: $${0}"
+    "message": "Filtros cosméticos: $${0}"
   },
   "country": {
     "message": "País"
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "Filtros Personalizados"
   },
+  "custom_filters_has_been_updated": {
+    "message": "Os filtros personalizados foram atualizados"
+  },
   "customer_interaction": {
     "message": "Interação com o cliente",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "dias"
   },
   "detailed_view": {
     "message": "Visão detalhada"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Exibe a contagem do rastreador no ícone Ghostery na barra de ferramentas do navegador."
+  },
+  "dnr_rules__@_0_": {
+    "message": "Regras DNR: $${0}"
   },
   "don_t_ask_again": {
     "message": "Não pergunte novamente"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "Insira o URL do site"
   },
-  "errors__@_0___": {
-    "message": "Erros ($${0}):"
+  "errors__@_0__": {
+    "message": "Erros ($${0})"
   },
   "essential": {
     "message": "Essencial",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "Obter ajuda"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery: ação exigida"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "O Ghostery não pode bloqueá-los devido à falta de permissões."
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery foi retomado."
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "O Ghostery está pronto para parar os rastreadores e proteger sua privacidade enquanto navega!"
-  },
-  "ghostery_is_disabled": {
-    "message": "Ghostery está desabilitado"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "O Ghostery está instalado com funcionalidade limitada"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "O Ghostery parará de trabalhar em:"
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ajude o Ghostery a lutar por uma web onde a privacidade é um direito humano básico."
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "Hospedando",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "horas"
   },
   "ignore": {
     "message": "Ignorar"
@@ -403,7 +391,7 @@
     "message": "Navegue até um site para ver o Ghostery em ação."
   },
   "network_filters__@_0_": {
-    "message": "Filtros de Rede: $${0}"
+    "message": "Filtros de rede: $${0}"
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -489,9 +477,6 @@
   },
   "renew_ghostery_for_full_protection": {
     "message": "renovar GHOSTERY para ter proteção completa"
-  },
-  "renew_setup": {
-    "message": "Renovar configuração"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Substitui o ícone do Ghostery na barra de ferramentas do navegador pela roda do rastreador."
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "Contagem de rastreadores"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Rastreadores detectados pelo Ghostery neste site:&nbsp;$$$${0}"
-  },
   "trackers_modified": {
     "message": "Rastreadores modificados"
   },
@@ -639,9 +621,6 @@
     "message": "Não identificado",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "Atualizar Filtros"
-  },
   "urls_blocked": {
     "message": "URLs bloqueados"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "Visite nosso blog"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "Atualizamos os Termos e Condições. Para continuar usando o Ghostery Tracker & Ad Blocker durante a navegação, renove a configuração."
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Sabemos que você confia no Ghostery para ter uma experiência tranquila no YouTube. Até que surja uma solução mais refinada, aqui está uma correção temporária."
