--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "Пользовательские фильтры"
   },
+  "custom_filters_has_been_updated": {
+    "message": "Фильтры обновлены"
+  },
   "customer_interaction": {
     "message": "Взаимодействие с клиентами",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "дни"
   },
   "detailed_view": {
     "message": "Детальный просмотр"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Показывает счетчик трекеров у значка Ghostery на панели инструментов в браузере."
+  },
+  "dnr_rules__@_0_": {
+    "message": "Правила DNR: $${0}"
   },
   "don_t_ask_again": {
     "message": "Не спрашивай больше"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "Enter website URL"
   },
-  "errors__@_0___": {
-    "message": "Ошибки ($${0}):"
+  "errors__@_0__": {
+    "message": "Ошибки ($${0})"
   },
   "essential": {
     "message": "Важное",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "Помощь"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery: необходимо выполнить действие"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "У Ghostery недостаточно разрешений для блокировки трекеров."
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery возобновлен."
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery блокирует трекеры и обеспечивает конфиденциальность при работе в браузере."
-  },
-  "ghostery_is_disabled": {
-    "message": "Расширение Ghostery отключено"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery устанавливается с ограниченной функциональностью"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery будет показывать количество трекеров, заблокированных на странице. Чтобы посмотреть более подробную статистику, нажмите на значок расширения."
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "Ghostery перестанет работать здесь:"
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Помогите Ghostery в борьбе за конфиденциальность как за основное право человека."
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "Хостинг",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "часы"
   },
   "ignore": {
     "message": "Игнорировать"
@@ -490,9 +478,6 @@
   "renew_ghostery_for_full_protection": {
     "message": "возобновите GHOSTERY, чтобы добиться полной защиты"
   },
-  "renew_setup": {
-    "message": "Возобновить настройку"
-  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Заменяет значок Ghostery на панели инструментов статистикой трекеров."
   },
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "Трекеры Count"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Трекеры, обнаруженные Ghostery на этом сайте:&nbsp;$${0}"
-  },
   "trackers_modified": {
     "message": "Измененные трекеры"
   },
@@ -639,9 +621,6 @@
     "message": "Неизвестно",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "Обновить фильтры"
-  },
   "urls_blocked": {
     "message": "Заблокированные URL-адреса"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "Посетите наш блог"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "Мы обновили Условия и положения. Чтобы и дальше использовать Ghostery Tracker & Ad Blocker для просмотра веб-страниц, обновите настройки."
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Мы знаем, что ты полагаешься на Ghostery для бесперебойной работы с YouTube. Пока не появится более совершенное решение, вот временное исправление."
