--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "自定义过滤器"
   },
+  "custom_filters_has_been_updated": {
+    "message": "自定义过滤器已更新"
+  },
   "customer_interaction": {
     "message": "客户互动",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "天"
   },
   "detailed_view": {
     "message": "详细视图"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "在浏览器工具栏中的 Ghostery 图标上显示跟踪器计数。"
+  },
+  "dnr_rules__@_0_": {
+    "message": "DNR规则：$${0}"
   },
   "don_t_ask_again": {
     "message": "别再问了"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "输入网站 URL"
   },
-  "errors__@_0___": {
-    "message": "错误 ($${0}):"
+  "errors__@_0__": {
+    "message": "错误 ($${0})"
   },
   "essential": {
     "message": "基本",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "获取帮助"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery：需要操作"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "由于缺乏相关权限，Ghostery 无法阻止跟踪器。"
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery 已恢复。"
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery 已准备好阻止跟踪器，并在您浏览时保护您的隐私！"
-  },
-  "ghostery_is_disabled": {
-    "message": "Ghostery 已禁用"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery安装了有限的功能"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 会显示页面上已阻止的跟踪器数量。点击 Ghostery 图标，获取更多详情。"
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "距离 Ghostery 停止运行还有："
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "帮助 Ghostery 为建立以隐私为基本人权的网络而奋斗。"
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "托管",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "小时"
   },
   "ignore": {
     "message": "忽略"
@@ -490,9 +478,6 @@
   "renew_ghostery_for_full_protection": {
     "message": "续订 GHOSTERY 以获得全面保护"
   },
-  "renew_setup": {
-    "message": "续订设置"
-  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "将浏览器工具栏的 Ghostery 图标替换为跟踪器轮盘。"
   },
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "跟踪器数量"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Ghostery 在此网站上检测到的跟踪器：$${0}"
-  },
   "trackers_modified": {
     "message": "已修改跟踪器"
   },
@@ -639,9 +621,6 @@
     "message": "未识别",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "更新过滤器"
-  },
   "urls_blocked": {
     "message": "已拦截 URL"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "访问我们的博客"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "我们更新了条款及条件。若要在浏览时继续使用 Ghostery Tracker 和广告拦截工具，请更新设置。"
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "我们知道，您依赖 Ghostery 来获得流畅的 YouTube 体验。在更完善的解决方案出现之前，这里有一个临时解决方案。"
