--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -162,7 +162,7 @@
     "message": "複製到剪貼簿"
   },
   "cosmetic_filters__@_0_": {
-    "message": "化妝過濾器：$${0}"
+    "message": "美容過濾器：$${0}"
   },
   "country": {
     "message": "國家"
@@ -177,12 +177,12 @@
   "custom_filters": {
     "message": "自訂過濾器"
   },
+  "custom_filters_has_been_updated": {
+    "message": "自訂過濾器已更新"
+  },
   "customer_interaction": {
     "message": "客戶互動",
     "description": "Tracker category name"
-  },
-  "days": {
-    "message": "日"
   },
   "detailed_view": {
     "message": "詳細圖示"
@@ -198,6 +198,9 @@
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "在瀏覽器工具列中的 Ghostery 圖示上顯示追蹤器記數。"
+  },
+  "dnr_rules__@_0_": {
+    "message": "DNR 規則：$${0}"
   },
   "don_t_ask_again": {
     "message": "不要再問"
@@ -236,8 +239,8 @@
   "enter_website_url": {
     "message": "輸入網站網址"
   },
-  "errors__@_0___": {
-    "message": "錯誤 ($${0}):"
+  "errors__@_0__": {
+    "message": "錯誤 ($${0})"
   },
   "essential": {
     "message": "基本內容",
@@ -268,12 +271,6 @@
   "get_help": {
     "message": "取得幫助"
   },
-  "ghostery__action_required": {
-    "message": "Ghostery：需要採取動作"
-  },
-  "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "由於缺乏相關權限，Ghostery 無法阻擋追蹤器。"
-  },
   "ghostery_has_been_resumed_": {
     "message": "Ghostery 已恢復。"
   },
@@ -285,9 +282,6 @@
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery 已經準備好阻擋追蹤器，並在你瀏覽網頁時保護你的隱私！"
-  },
-  "ghostery_is_disabled": {
-    "message": "Ghostery 已關閉"
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery 安裝了有限的功能"
@@ -316,9 +310,6 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
-  "ghostery_will_stop_working_in_": {
-    "message": "Ghostery 將會在以下位置停止運作："
-  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "協助 Ghostery 為建立以隱私為基本人權的網路而奮鬥。"
   },
@@ -331,9 +322,6 @@
   "hosting": {
     "message": "託管",
     "description": "Tracker category name"
-  },
-  "hours": {
-    "message": "小時"
   },
   "ignore": {
     "message": "忽略"
@@ -490,9 +478,6 @@
   "renew_ghostery_for_full_protection": {
     "message": "更新 GHOSTERY 以獲得全面防護"
   },
-  "renew_setup": {
-    "message": "更新設定"
-  },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "將瀏覽器工具列中的 Ghostery 圖示換成追蹤器齒輪。"
   },
@@ -595,9 +580,6 @@
   "trackers_count": {
     "message": "追蹤器計數"
   },
-  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Ghostery 在此網站上偵測到的追蹤器：$${0}"
-  },
   "trackers_modified": {
     "message": "已修改的追蹤器"
   },
@@ -639,9 +621,6 @@
     "message": "不明",
     "description": "Tracker category name"
   },
-  "update_filters": {
-    "message": "更新過濾器"
-  },
   "urls_blocked": {
     "message": "已封鎖的 URL"
   },
@@ -656,9 +635,6 @@
   },
   "visit_our_blog": {
     "message": "造訪我們的博客"
-  },
-  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
-    "message": "我們更新了條款及條件。若要在瀏覽時繼續使用 Ghostery Tracker 和廣告攔截器，請更新設定。"
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "我們知道您依靠 Ghostery 來獲得流暢的 YouTube 體驗。 在出現更完善的解決方案之前，這裡有一個臨時解決方案。"
